<resources>
    <string name="app_name">ComeFIT</string>
    <string name="hint_nombre_usuario">Nombre de Usuario</string>
    <string name="hint_contraseña">Contraseña</string>
    <string name="txt_registrar">Registrar</string>
    <string name="txt_ingresar">Ingresar</string>
    <string name="nombre_registrar">Email</string>
    <string name="fecha_registrar">Fecha de nacimiento</string>
    <string name="contraseña_registrar">Contraseña</string>
    <string name="contraseñaConfirmar_registrar">Confirmar contraseña</string>
    <string name="edad_registrar">Edad</string>
    <string name="altura_registrar">Altura(cm)</string>
    <string name="peso_registrar">Peso(kg)</string>
    <string name="tv_registrar">Registrar usuario</string>
    <string name="btn_registrar">Registrar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_agendar">Recordatorios</string>
    <string name="txt_calculadora">Calculadora de Calorias</string>
    <string name="txt_calendario">Calendario</string>
    <string name="txt_menu">Recetario</string>

    <string name="txt_recordatorio">Todas tus metas</string>
    <string name="txt_vistarecordatorio">Tu Meta</string>
    <string name="txt_metaTitulo">Para:</string>
    <string name="nuevameta">Nombre de Nueva Meta</string>
    <string name="fechameta">Ingrese la Fecha de tu Meta</string>
    <string name="descripcionMeta">Ingresa algunas notas a tu Meta</string>
    <string name="txt_saludo">¡Bienvenido!</string>
    <string name="txt_pesoMeta">Ingresa las calorías que vas a consumir</string>
</resources>