<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/menu1"
    tools:context=".Menu">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.5"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_recordatorios"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginTop="90dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="50dp"
            android:backgroundTint="#FFB647"
            android:text="@string/txt_agendar"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idCardV1" />

        <Button
            android:id="@+id/btn_calculadora"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="90dp"
            android:layout_marginBottom="50dp"
            android:backgroundTint="#FFB647"
            android:text="@string/txt_calculadora"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/btn_recordatorios"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idCardV1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.5"
        android:gravity="center">

        <Button
            android:id="@+id/btn_menu"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="#FFB647"
            android:text="@string/txt_menu"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_recordatorios" />

        <Button
            android:id="@+id/btn_calen"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="#FFB647"
            android:text="@string/txt_calendario"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_menu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_calculadora" />

    </LinearLayout>

</LinearLayout>


