<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditarRecordatorio">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="@color/verdeRaro"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imgbtn_back"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="#EFE9E9"
                android:backgroundTint="#00FFFFFF"
                android:minHeight="48dp"
                app:srcCompat="?attr/actionModeCloseDrawable"
                tools:ignore="SpeakableTextPresentCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:layout_weight="0.5"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_tituloNuevaMeta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nuevameta"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/edt_nombreTarea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_fechaMeta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fechameta"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/et_fechaMeta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_descripcionMeta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/descripcionMeta"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/edt_descripcionMeta"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:inputType="textPersonName"
                tools:ignore="SpeakableTextPresentCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <Button
                android:id="@+id/brn_guardartMeta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Guardar" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>