<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.edu.ecordoba263.comefit.fragment.FragmentMenu"
    android:background="@drawable/fondo">

    <androidx.cardview.widget.CardView
        android:id="@+id/idCardV1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        app:cardBackgroundColor="#807A7A"
        app:cardCornerRadius="10dp"
        app:cardElevation="6dp">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="172dp"
            android:layout_height="95dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="5dp"
            android:scaleType="centerCrop"
            android:src="@drawable/logo2" />

        <TextView
            android:id="@+id/tv_nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="250dp"
            android:layout_marginTop="30dp"
            android:text="TextView"
            android:textSize="24sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/idGrid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/idCardV1"
        android:layout_marginTop="15dp"
        android:padding="4dp"
        app:columnCount="2"
        app:rowCount="2">

        <androidx.cardview.widget.CardView
            android:id="@+id/idCardV2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="200dp"
            android:foreground="?selectableItemBackground"
            app:cardCornerRadius="8dp"
            app:cardElevation="6dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <LinearLayout
                android:id="@+id/linear_agendar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="135dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/agendar"></ImageView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/txt_agendar"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:textStyle="bold"></TextView>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/idCardV3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="200dp"
            android:foreground="?selectableItemBackground"
            app:cardCornerRadius="8dp"
            app:cardElevation="6dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="135dp"
                    android:layout_height="151dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/calc"></ImageView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/txt_calculadora"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:textStyle="bold"></TextView>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/idCardV4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="-160dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="150dp"
            android:foreground="?selectableItemBackground"
            app:cardCornerRadius="8dp"
            app:cardElevation="6dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="135dp"
                    android:layout_height="151dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/calen"></ImageView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/txt_calendario"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:textStyle="bold"></TextView>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/idCardV5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="-160dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="150dp"
            android:foreground="?selectableItemBackground"
            app:cardCornerRadius="8dp"
            app:cardElevation="6dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="135dp"
                    android:layout_height="151dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/menu"></ImageView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/txt_menu"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:textStyle="bold"></TextView>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.gridlayout.widget.GridLayout>

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/idOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="320dp"
        android:layout_marginLeft="320dp"
        android:layout_marginTop="411dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="10dp"
        app:fab_addButtonColorNormal="#E6DFDF"
        app:fab_addButtonPlusIconColor="#000000">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="#E6DFDF"
            app:fab_icon="@drawable/conf"
            app:fab_size="mini"></com.getbase.floatingactionbutton.FloatingActionButton>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="#E6DFDF"
            app:fab_icon="@drawable/conf"
            app:fab_size="mini"></com.getbase.floatingactionbutton.FloatingActionButton>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="#E6DFDF"
            app:fab_icon="@drawable/conf"
            app:fab_size="mini"></com.getbase.floatingactionbutton.FloatingActionButton>

    </com.getbase.floatingactionbutton.FloatingActionsMenu>

</RelativeLayout>